--- a/StormStock/.classpath
+++ b/StormStock/.classpath
@@ -6,8 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/apache-tomcat-7.0.64/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="jar/htmlparser-1.6.jar"/>
 	<classpathentry kind="lib" path="jar/xmlParserAPIs-2.0.2.jar"/>
+	<classpathentry kind="lib" path="jar/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
