--- a/StormStock/.classpath
+++ b/StormStock/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="lib/htmlparser-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="lib/xmlParserAPIs-2.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/jeromq-0.3.4.jar"/>
+	<classpathentry kind="lib" path="lib/protobuf-java-2.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
