fix acc info store

--- a/StormStock/.classpath
+++ b/StormStock/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/xmlParserAPIs-2.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/jeromq-0.3.4.jar"/>
 	<classpathentry kind="lib" path="lib/protobuf-java-2.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
