--- a/AutoStockTransaction/AutoStockTransaction/AutoStockTransaction.vcxproj
+++ b/AutoStockTransaction/AutoStockTransaction/AutoStockTransaction.vcxproj
@@ -33,7 +33,7 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>Static</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
@@ -44,7 +44,7 @@
     <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -90,7 +90,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
-      <AdditionalIncludeDirectories>C:\Program Files\Java\jdk1.8.0_111\include;C:\Program Files\Java\jdk1.8.0_111\include\win32</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;C:\Program Files\Java\jdk1.8.0_111\include;C:\Program Files\Java\jdk1.8.0_111\include\win32</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -120,32 +120,50 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\Program Files\Java\jdk1.8.0_111\include;C:\Program Files\Java\jdk1.8.0_111\include\win32</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;C:\Program Files\Java\jdk1.8.0_111\include;C:\Program Files\Java\jdk1.8.0_111\include\win32</AdditionalIncludeDirectories>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>.;C:\Program Files\Java\jdk1.8.0_111\include\win32;C:\Program Files\Java\jdk1.8.0_111\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="DCLib.cpp" />
+    <ClCompile Include="jni\impl.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="stormstock_ori_capi_CATHSAccount.cpp" />
     <ClCompile Include="TongHuaShun.cpp" />
     <ClCompile Include="WinHandle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h" />
     <ClInclude Include="DCLib.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_CommissionOrder.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_DealOrder.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_HoldStock.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultAllStockMarketValue.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultAvailableMoney.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultCommissionOrderList.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultDealOrderList.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultHoldStockList.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultTotalAssets.h" />
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_TRANACT.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="stormstock_ori_capi_CATHSAccount.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TongHuaShun.h" />
     <ClInclude Include="WinHandle.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
