--- a/AutoStockTransaction/AutoStockTransaction/AutoStockTransaction.vcxproj.filters
+++ b/AutoStockTransaction/AutoStockTransaction/AutoStockTransaction.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="Header Files\jni">
+      <UniqueIdentifier>{1a71cd59-a7c7-41fe-b756-e645f5f355d1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\jni">
+      <UniqueIdentifier>{23b76e62-e99f-4f60-b124-acbf2615ecad}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common.cpp">
@@ -33,8 +39,8 @@
     <ClCompile Include="WinHandle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="stormstock_ori_capi_CATHSAccount.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="jni\impl.cpp">
+      <Filter>Source Files\jni</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -56,11 +62,44 @@
     <ClInclude Include="WinHandle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="stormstock_ori_capi_CATHSAccount.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_CommissionOrder.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_DealOrder.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_HoldStock.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultAllStockMarketValue.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultAvailableMoney.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultCommissionOrderList.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultDealOrderList.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultHoldStockList.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_ResultTotalAssets.h">
+      <Filter>Header Files\jni</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\stormstock_ori_capi_CATHSAccount_TRANACT.h">
+      <Filter>Header Files\jni</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
